# Brayns-Research-Modules

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
cartoon/: CMakeLists.txt  cartoon.cpp
cartoon/ispc/renderer/: CartoonRenderer.cpp  CartoonRenderer.h  CartoonRenderer.ispc  ContoursRenderer.cpp  ContoursRenderer.h  ContoursRenderer.ispc
clipping/: CMakeLists.txt  README.md  clipping.cpp
clipping/ispc/camera/: SpherePerspectiveCamera.cpp  SpherePerspectiveCamera.h  SpherePerspectiveCamera.ispc
common/: CMakeLists.txt
common/ispc/renderer/: AbstractRenderer.cpp  AbstractRenderer.h  AbstractRenderer.ih  AbstractRenderer.ispc  ExtendedOBJMaterial.cpp  ExtendedOBJMaterial.h  ExtendedOBJMaterial.ih  ExtendedOBJMaterial.ispc  Glsl.ih  Glsl.ispc  RandomGenerator.ih  RandomGenerator.ispc  SimulationRenderer.h  SkyBox.ih  SkyBox.ispc
fractals/: CMakeLists.txt  README.md  fractals.cpp
fractals/ispc/renderer/: FractalsRenderer.cpp  FractalsRenderer.h  FractalsRenderer.ispc  MengerSpongeRenderer.cpp  MengerSpongeRenderer.h  MengerSpongeRenderer.ispc  VoxelizerRenderer.cpp  VoxelizerRenderer.h  VoxelizerRenderer.ispc
holography/: CMakeLists.txt  README.md  holography.cpp
holography/ispc/camera/: HolographicCamera.cpp  HolographicCamera.h  HolographicCamera.ispc
nanolive/: nanolive.cpp
nanolive/ispc/renderer/: NanoliveRenderer.cpp  NanoliveRenderer.h  NanoliveRenderer.ispc
nesterformentera/: README.md  nesterformentera.cpp
nesterformentera/ispc/renderer/: NesterFormenteraRenderer.cpp  NesterFormenteraRenderer.h  NesterFormenteraRenderer.ispc
opendeck/: CMakeLists.txt  opendeck.cpp
opendeck/ispc/camera/: OpenDeckCamera.cpp  OpenDeckCamera.h  OpenDeckCamera.ih  OpenDeckCamera.ispc
pathtracing/: CMakeLists.txt  README.md  pathtracing.cpp
pathtracing/ispc/renderer/: PathTracingRenderer.cpp  PathTracingRenderer.h  PathTracingRenderer.ispc
pbr/: CMakeLists.txt  pbr.cpp
pbr/ispc/renderer/: PbrRenderer.cpp  PbrRenderer.h  PbrRenderer.ispc
plugin/: BraynsResearchModulesPlugin.cpp  BraynsResearchModulesPlugin.h  CMakeLists.txt  log.h
plugin/api/: ResearchModulesParams.cpp  ResearchModulesParams.h
plugin/io/: EEGHandler.cpp  EEGHandler.h
raymarching/: CMakeLists.txt  README.md  raymarching.cpp
raymarching/ispc/renderer/: DistanceEstimatorRenderer.cpp  DistanceEstimatorRenderer.h  DistanceEstimatorRenderer.ispc
simulation/: CMakeLists.txt  README.md  simulation.cpp
simulation/ispc/renderer/: TransparencyRenderer.cpp  TransparencyRenderer.h  TransparencyRenderer.ispc
subsurfacescattering/: CMakeLists.txt  README.md  sss.cpp
subsurfacescattering/ispc/renderer/: SSSRenderer.cpp  SSSRenderer.h  SSSRenderer.ispc
templates/qtcreator/: README.md
templates/qtcreator/brayns-module/: CMakeLists.txt  README.md  file.pro  module.cpp  wizard.json
templates/qtcreator/brayns-module/ispc/camera/: Camera.cpp  Camera.h  Camera.ih  Camera.ispc
volume/: CMakeLists.txt  README.md  volume.cpp
volume/ispc/renderer/: VolumeRenderer.cpp  VolumeRenderer.h  VolumeRenderer.ispc
